[gd_scene load_steps=15 format=3 uid="uid://biylg2wsontn3"]

[ext_resource type="FontFile" uid="uid://01k27lk2a4bw" path="res://OQ_Toolkit/OQ_UI2D/theme/RobotoMono-Medium.ttf" id="1"]
[ext_resource type="Script" path="res://game/settings_Panel.gd" id="2"]
[ext_resource type="FontFile" uid="uid://cdsnr8tscm8y6" path="res://OQ_Toolkit/OQ_UI2D/theme/Roboto-Medium.ttf" id="3"]
[ext_resource type="PackedScene" uid="uid://dtipmx5ep1dkk" path="res://game/vr_slider.tscn" id="4"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(1, 1, 1, 1)

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("1")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/2/0/ascent = 0.0
cache/0/2/0/descent = 0.0
cache/0/2/0/underline_position = 0.0
cache/0/2/0/underline_thickness = 0.0
cache/0/2/0/scale = 1.0
cache/0/2/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/3/0/ascent = 0.0
cache/0/3/0/descent = 0.0
cache/0/3/0/underline_position = 0.0
cache/0/3/0/underline_thickness = 0.0
cache/0/3/0/scale = 1.0
cache/0/3/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/4/0/ascent = 0.0
cache/0/4/0/descent = 0.0
cache/0/4/0/underline_position = 0.0
cache/0/4/0/underline_thickness = 0.0
cache/0/4/0/scale = 1.0
cache/0/4/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/5/0/ascent = 0.0
cache/0/5/0/descent = 0.0
cache/0/5/0/underline_position = 0.0
cache/0/5/0/underline_thickness = 0.0
cache/0/5/0/scale = 1.0
cache/0/5/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/6/0/ascent = 0.0
cache/0/6/0/descent = 0.0
cache/0/6/0/underline_position = 0.0
cache/0/6/0/underline_thickness = 0.0
cache/0/6/0/scale = 1.0
cache/0/6/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/7/0/ascent = 0.0
cache/0/7/0/descent = 0.0
cache/0/7/0/underline_position = 0.0
cache/0/7/0/underline_thickness = 0.0
cache/0/7/0/scale = 1.0
cache/0/7/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/8/0/ascent = 0.0
cache/0/8/0/descent = 0.0
cache/0/8/0/underline_position = 0.0
cache/0/8/0/underline_thickness = 0.0
cache/0/8/0/scale = 1.0
cache/0/8/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/9/0/ascent = 0.0
cache/0/9/0/descent = 0.0
cache/0/9/0/underline_position = 0.0
cache/0/9/0/underline_thickness = 0.0
cache/0/9/0/scale = 1.0
cache/0/9/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/10/0/ascent = 0.0
cache/0/10/0/descent = 0.0
cache/0/10/0/underline_position = 0.0
cache/0/10/0/underline_thickness = 0.0
cache/0/10/0/scale = 1.0
cache/0/10/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/10/0 = Vector2(0, 0)

[sub_resource type="Theme" id="3"]
default_font = SubResource("2")

[sub_resource type="FontFile" id="4"]
fallbacks = Array[Font]([ExtResource("3")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="Theme" id="5"]
default_font = SubResource("4")

[sub_resource type="FontFile" id="6"]
fallbacks = Array[Font]([ExtResource("3")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="Theme" id="7"]
default_font = SubResource("6")

[sub_resource type="StyleBoxFlat" id="10"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="8"]
bg_color = Color(0.14902, 0.14902, 0.14902, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="9"]
bg_color = Color(0.270588, 0.270588, 0.270588, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)

[node name="settings_Panel" type="Panel"]
offset_right = 896.0
offset_bottom = 576.0
mouse_filter = 1
theme_override_styles/panel = SubResource("1")
script = ExtResource("2")

[node name="settings" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -432.0
offset_top = -272.0
offset_right = 429.0
offset_bottom = -249.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("3")
text = "Settings
"

[node name="note" type="Label" parent="."]
layout_mode = 2
offset_left = 27.0
offset_top = 36.0
offset_right = 859.0
offset_bottom = 50.0
theme = SubResource("3")
theme_override_font_sizes/font_size = 10
text = "    (*) Has performance impact (hover options for info)    "
horizontal_alignment = 2

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 27.0
offset_top = 54.0
offset_right = 867.0
offset_bottom = 481.0

[node name="VBox" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="d_background" type="CheckButton" parent="ScrollContainer/VBox"]
layout_mode = 2
tooltip_text = "Low Performance impact*"
theme = SubResource("3")
text = "*Dynamic Background: "

[node name="cut_blocks" type="CheckButton" parent="ScrollContainer/VBox"]
layout_mode = 2
tooltip_text = "High Performance impact*"
theme = SubResource("3")
text = "*Cut Blocks: "

[node name="glare" type="CheckButton" parent="ScrollContainer/VBox"]
layout_mode = 2
tooltip_text = "Medium Performance impact*"
theme = SubResource("3")
text = "*Glow: "

[node name="saber_tail" type="CheckButton" parent="ScrollContainer/VBox"]
layout_mode = 2
tooltip_text = "High Performance impact*"
theme = SubResource("3")
text = "*Saber Tail: "

[node name="show_fps" type="CheckButton" parent="ScrollContainer/VBox"]
layout_mode = 2
theme = SubResource("3")
text = "Show FPS:"

[node name="show_collisions" type="CheckButton" parent="ScrollContainer/VBox"]
layout_mode = 2
theme = SubResource("3")
text = "Show Collision Shapes:"

[node name="bombs_enabled" type="CheckButton" parent="ScrollContainer/VBox"]
layout_mode = 2
theme = SubResource("3")
text = "Bombs Enabled:"

[node name="SaberThicknessRow" type="HBoxContainer" parent="ScrollContainer/VBox"]
layout_mode = 2

[node name="saber_thickness_label" type="Label" parent="ScrollContainer/VBox/SaberThicknessRow"]
layout_mode = 2
theme = SubResource("3")
text = "Saber Thickness: "

[node name="saber_thickness" type="HSlider" parent="ScrollContainer/VBox/SaberThicknessRow"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 10.0
value = 100.0

[node name="SaberTypeRow" type="HBoxContainer" parent="ScrollContainer/VBox"]
layout_mode = 2

[node name="saber_type_label" type="Label" parent="ScrollContainer/VBox/SaberTypeRow"]
layout_mode = 2
theme = SubResource("3")
text = "Saber Type:"

[node name="saber" type="OptionButton" parent="ScrollContainer/VBox/SaberTypeRow"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("5")
theme_override_fonts/font = SubResource("4")
flat = true

[node name="SaberColorsRow" type="HBoxContainer" parent="ScrollContainer/VBox"]
layout_mode = 2

[node name="left_saber_col_label" type="Label" parent="ScrollContainer/VBox/SaberColorsRow"]
layout_mode = 2
theme = SubResource("3")
text = "Saber Colors: "

[node name="left_saber_col" type="ColorPickerButton" parent="ScrollContainer/VBox/SaberColorsRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Left saber"
flat = true
color = Color(1, 0.101961, 0.101961, 1)
edit_alpha = false

[node name="right_saber_col" type="ColorPickerButton" parent="ScrollContainer/VBox/SaberColorsRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Right saber"
flat = true
color = Color(0.101961, 0.101961, 1, 1)
edit_alpha = false

[node name="UI_VolumeRow" type="HBoxContainer" parent="ScrollContainer/VBox"]
layout_mode = 2

[node name="ui_volume_label" type="Label" parent="ScrollContainer/VBox/UI_VolumeRow"]
layout_mode = 2
theme = SubResource("3")
text = "UI Volume:"

[node name="ui_volume_slider" type="HSlider" parent="ScrollContainer/VBox/UI_VolumeRow"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 10.0
value = 10.0

[node name="left_saber_offset" type="HBoxContainer" parent="ScrollContainer/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/VBox/left_saber_offset"]
layout_mode = 2
text = "Left Saber Offset:"

[node name="Control" type="Control" parent="ScrollContainer/VBox/left_saber_offset"]
layout_mode = 2
size_flags_horizontal = 3

[node name="poslabel" type="Label" parent="ScrollContainer/VBox/left_saber_offset"]
layout_mode = 2
text = "Position:"

[node name="posx" type="SpinBox" parent="ScrollContainer/VBox/left_saber_offset"]
layout_mode = 2
min_value = -1.0
max_value = 1.0
step = 0.001

[node name="posy" type="SpinBox" parent="ScrollContainer/VBox/left_saber_offset"]
layout_mode = 2
min_value = -1.0
max_value = 1.0
step = 0.001

[node name="posz" type="SpinBox" parent="ScrollContainer/VBox/left_saber_offset"]
layout_mode = 2
min_value = -1.0
max_value = 1.0
step = 0.001

[node name="Control2" type="Control" parent="ScrollContainer/VBox/left_saber_offset"]
layout_mode = 2
size_flags_horizontal = 3

[node name="rotlabel" type="Label" parent="ScrollContainer/VBox/left_saber_offset"]
layout_mode = 2
text = "Rotation:"

[node name="rotx" type="SpinBox" parent="ScrollContainer/VBox/left_saber_offset"]
layout_mode = 2
min_value = -180.0
max_value = 180.0
step = 0.5

[node name="roty" type="SpinBox" parent="ScrollContainer/VBox/left_saber_offset"]
layout_mode = 2
min_value = -180.0
max_value = 180.0
step = 0.5

[node name="rotz" type="SpinBox" parent="ScrollContainer/VBox/left_saber_offset"]
layout_mode = 2
min_value = -180.0
max_value = 180.0
step = 0.5

[node name="right_saber_offset" type="HBoxContainer" parent="ScrollContainer/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/VBox/right_saber_offset"]
layout_mode = 2
text = "Right Saber Offset:"

[node name="Control" type="Control" parent="ScrollContainer/VBox/right_saber_offset"]
layout_mode = 2
size_flags_horizontal = 3

[node name="poslabel" type="Label" parent="ScrollContainer/VBox/right_saber_offset"]
layout_mode = 2
text = "Position:"

[node name="posx" type="SpinBox" parent="ScrollContainer/VBox/right_saber_offset"]
layout_mode = 2
min_value = -1.0
max_value = 1.0
step = 0.001

[node name="posy" type="SpinBox" parent="ScrollContainer/VBox/right_saber_offset"]
layout_mode = 2
min_value = -1.0
max_value = 1.0
step = 0.001

[node name="posz" type="SpinBox" parent="ScrollContainer/VBox/right_saber_offset"]
layout_mode = 2
min_value = -1.0
max_value = 1.0
step = 0.001

[node name="Control2" type="Control" parent="ScrollContainer/VBox/right_saber_offset"]
layout_mode = 2
size_flags_horizontal = 3

[node name="rotlabel" type="Label" parent="ScrollContainer/VBox/right_saber_offset"]
layout_mode = 2
text = "Rotation:"

[node name="rotx" type="SpinBox" parent="ScrollContainer/VBox/right_saber_offset"]
layout_mode = 2
min_value = -180.0
max_value = 180.0
step = 0.5

[node name="roty" type="SpinBox" parent="ScrollContainer/VBox/right_saber_offset"]
layout_mode = 2
min_value = -180.0
max_value = 180.0
step = 0.5

[node name="rotz" type="SpinBox" parent="ScrollContainer/VBox/right_saber_offset"]
layout_mode = 2
min_value = -180.0
max_value = 180.0
step = 0.5

[node name="player_height_offset" type="HBoxContainer" parent="ScrollContainer/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/VBox/player_height_offset"]
layout_mode = 2
text = "Player Height Offset:"

[node name="Control" type="Control" parent="ScrollContainer/VBox/player_height_offset"]
layout_mode = 2
size_flags_horizontal = 3

[node name="pos" type="SpinBox" parent="ScrollContainer/VBox/player_height_offset"]
layout_mode = 2
min_value = -0.25
max_value = 0.25
step = 0.05

[node name="disable_map_color" type="CheckButton" parent="ScrollContainer/VBox"]
layout_mode = 2
theme = SubResource("3")
text = "Ignore Map's Colors:"

[node name="defaults" type="Button" parent="."]
layout_mode = 0
offset_left = 546.283
offset_top = 496.0
offset_right = 692.283
offset_bottom = 556.0
theme = SubResource("7")
theme_override_styles/normal = SubResource("10")
theme_override_styles/hover = SubResource("8")
theme_override_styles/pressed = SubResource("9")
text = "Default"

[node name="apply" type="Button" parent="."]
layout_mode = 0
offset_left = 719.136
offset_top = 496.0
offset_right = 865.136
offset_bottom = 556.0
theme = SubResource("7")
theme_override_styles/normal = SubResource("10")
theme_override_styles/hover = SubResource("8")
theme_override_styles/pressed = SubResource("9")
text = "Apply"

[node name="vr_slider" parent="." instance=ExtResource("4")]
scroll_node_path = NodePath("../ScrollContainer")

[connection signal="toggled" from="ScrollContainer/VBox/d_background" to="." method="_on_d_background_toggled"]
[connection signal="toggled" from="ScrollContainer/VBox/cut_blocks" to="." method="_on_cut_blocks_toggled"]
[connection signal="toggled" from="ScrollContainer/VBox/glare" to="." method="_on_glare_toggled"]
[connection signal="toggled" from="ScrollContainer/VBox/saber_tail" to="." method="_on_saber_tail_toggled"]
[connection signal="toggled" from="ScrollContainer/VBox/show_fps" to="." method="_on_show_fps_toggled"]
[connection signal="toggled" from="ScrollContainer/VBox/show_collisions" to="." method="_on_show_collisions_toggled"]
[connection signal="toggled" from="ScrollContainer/VBox/bombs_enabled" to="." method="_on_bombs_enabled_toggled"]
[connection signal="value_changed" from="ScrollContainer/VBox/SaberThicknessRow/saber_thickness" to="." method="_on_thickness_value_changed"]
[connection signal="item_selected" from="ScrollContainer/VBox/SaberTypeRow/saber" to="." method="_on_saber_item_selected"]
[connection signal="color_changed" from="ScrollContainer/VBox/SaberColorsRow/left_saber_col" to="." method="_on_left_saber_color_changed"]
[connection signal="color_changed" from="ScrollContainer/VBox/SaberColorsRow/right_saber_col" to="." method="_on_right_saber_color_changed"]
[connection signal="value_changed" from="ScrollContainer/VBox/UI_VolumeRow/ui_volume_slider" to="." method="_on_ui_volume_slider_value_changed"]
[connection signal="value_changed" from="ScrollContainer/VBox/left_saber_offset/posx" to="." method="_on_left_saber_pos_x_changed"]
[connection signal="value_changed" from="ScrollContainer/VBox/left_saber_offset/posy" to="." method="_on_left_saber_pos_y_changed"]
[connection signal="value_changed" from="ScrollContainer/VBox/left_saber_offset/posz" to="." method="_on_left_saber_pos_z_changed"]
[connection signal="value_changed" from="ScrollContainer/VBox/left_saber_offset/rotx" to="." method="_on_left_saber_rot_x_changed"]
[connection signal="value_changed" from="ScrollContainer/VBox/left_saber_offset/roty" to="." method="_on_left_saber_rot_y_changed"]
[connection signal="value_changed" from="ScrollContainer/VBox/left_saber_offset/rotz" to="." method="_on_left_saber_rot_z_changed"]
[connection signal="value_changed" from="ScrollContainer/VBox/right_saber_offset/posx" to="." method="_on_right_saber_pos_x_changed"]
[connection signal="value_changed" from="ScrollContainer/VBox/right_saber_offset/posy" to="." method="_on_right_saber_pos_y_changed"]
[connection signal="value_changed" from="ScrollContainer/VBox/right_saber_offset/posz" to="." method="_on_right_saber_pos_z_changed"]
[connection signal="value_changed" from="ScrollContainer/VBox/right_saber_offset/rotx" to="." method="_on_right_saber_rot_x_changed"]
[connection signal="value_changed" from="ScrollContainer/VBox/right_saber_offset/roty" to="." method="_on_right_saber_rot_y_changed"]
[connection signal="value_changed" from="ScrollContainer/VBox/right_saber_offset/rotz" to="." method="_on_right_saber_rot_z_changed"]
[connection signal="value_changed" from="ScrollContainer/VBox/player_height_offset/pos" to="." method="_on_player_height_offset_changed"]
[connection signal="toggled" from="ScrollContainer/VBox/disable_map_color" to="." method="_on_disable_map_color_toggled"]
[connection signal="button_up" from="defaults" to="." method="_restore_defaults"]
[connection signal="pressed" from="apply" to="." method="_on_apply_pressed"]
